# tokimo-universal-im

./: Cargo.toml  README.md
.github/workflows/: ci.yml
crates/tokimo-core/: Cargo.toml
crates/tokimo-core/src/: error.rs  lib.rs
crates/tokimo-core/src/traits/: approval.rs  attendance.rs  auth.rs  calendar.rs  chat_list.rs  contact.rs  data_table.rs  department.rs  document.rs  email.rs  event.rs  group.rs  media.rs  meeting.rs  meeting_room.rs  message_ext.rs  messaging.rs  mod.rs  provider.rs  report.rs  task.rs  webhook.rs  wiki.rs
crates/tokimo-core/src/types/: approval.rs  attendance.rs  calendar.rs  common.rs  contact.rs  conversation.rs  data_table.rs  document.rs  email.rs  event.rs  extra.rs  group.rs  media.rs  meeting.rs  meeting_room.rs  message.rs  mod.rs  report.rs  task.rs  webhook.rs  wiki.rs
crates/tokimo-dingtalk/: Cargo.toml
crates/tokimo-dingtalk/src/: approval.rs  attendance.rs  auth.rs  calendar.rs  client.rs  contact.rs  data_table.rs  department.rs  event.rs  group.rs  lib.rs  meeting_room.rs  messaging.rs  provider.rs  report.rs  task.rs  webhook.rs
crates/tokimo-lark/: Cargo.toml
crates/tokimo-lark/src/: approval.rs  attendance.rs  auth.rs  calendar.rs  chat_list.rs  client.rs  contact.rs  data_table.rs  department.rs  document.rs  email.rs  event.rs  group.rs  lib.rs  media.rs  meeting.rs  meeting_room.rs  message_ext.rs  messaging.rs  provider.rs  task.rs  wiki.rs
crates/tokimo-wecom/: Cargo.toml
crates/tokimo-wecom/src/: auth.rs  calendar.rs  chat_list.rs  client.rs  contact.rs  data_table.rs  department.rs  document.rs  event.rs  group.rs  lib.rs  media.rs  meeting.rs  messaging.rs  provider.rs  task.rs  webhook.rs
