[package]
name = "tokimo-lark"
description = "Lark/Feishu (飞书) provider for the Tokimo Universal IM library"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
tokimo-core = { workspace = true }
tokio = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
async-trait = { workspace = true }
tracing = { workspace = true }
chrono = { workspace = true }
url = { workspace = true }
